cfn_benchmark/cfn_templates/the-aws-lab__aws-documentdb-template/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "DocumentDB Resource"

Parameters:
    ENV:
      Description: CodeComit repository name
      Type: String
      Default: stage

    HostedZoneResource:
      Description: Route53 Hosted Zone
      Type: String
      Default: example.com.

    AppName:
      Description: Application Name
      Type: String
      Default: theawslab

    DbUserName:
      Description: Database Username
      Type: String
      Default: admin

    DbPassword:
      Description: Database Password
      Type: String
      Default: password@123$

    DbInstanceClass:
      Description: Database Instance Type/Class
      Type: String
      Default: db.t3.medium

Resources:

    DatabaseCluster:
        Type: "AWS::DocDB::DBCluster"
        Properties:
          BackupRetentionPeriod : 4
          DBClusterIdentifier : !Join ['-', [!Ref ENV, !Ref AppName, 'database']]
          DBClusterParameterGroupName : "default.docdb3.6"
          DBSubnetGroupName : !Ref DBSubnet
          MasterUsername : !Ref DbUserName
          MasterUserPassword : !Ref DbPassword
          Port : "27017"
          PreferredBackupWindow : "07:34-08:04"
          PreferredMaintenanceWindow : "sat:04:51-sat:05:21"
          VpcSecurityGroupIds:
            - !Ref DBSecurityGroup

    DBSubnet:
      Type: "AWS::DocDB::DBSubnetGroup"
      Properties:
         DBSubnetGroupDescription: "description"
         #You can specify SubnetId directly or use the output from VPC stack
         SubnetIds:
            - !ImportValue OutputDBSubnetA
            - !ImportValue OutputDBSubnetB

    DBInstance:
      Type: "AWS::DocDB::DBInstance"
      Properties:
          AutoMinorVersionUpgrade: true
          DBClusterIdentifier: !Ref DatabaseCluster
          DBInstanceClass: !Ref DbInstanceClass
          DBInstanceIdentifier: !Join ['-', [!Ref ENV, !Ref AppName, 'instance']]
          PreferredMaintenanceWindow: "sat:06:54-sat:07:24"

    DBSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Allow http to client host
        #You can specify VPC Id directly or use the output from VPC stack
        VpcId: !ImportValue OutputVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 27017
          ToPort: 27017

        #You can specify CIDR range of open network or use the CIDR of your VPC.
          CidrIp: !ImportValue OutputCIDR
          # CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

    DBHostName:
      Type: AWS::Route53::RecordSet
      Properties:
        HostedZoneName: !Ref HostedZoneResource
        Comment: DNS name for my documentdb.
        Name: !Join ['.', [!Join ['-',[!Ref ENV, 'db']], !Ref HostedZoneResource]]
        Type: CNAME
        TTL: '60'
        ResourceRecords:
        - !GetAtt DatabaseCluster.Endpoint
